Login: header logo, Hindi text with Ams Vedant font, dashboard header branding

--- a/dashboard.html
+++ b/dashboard.html
@@ -12,8 +12,13 @@
 <body>
     <header class="app-header">
         <div class="app-header-inner">
-            <img src="public/Awwa2-logo.png" alt="AWWA Logo" class="app-logo" />
-            <h1 class="app-title">AWWA Family Management System</h1>
+            <div class="app-brand">
+                <img src="public/Awwa2-logo.png" alt="AWWA Logo" class="app-logo" />
+                <div class="app-title-wrap">
+                    <h1 class="app-title">AWWA Family Management System</h1>
+                    <div class="app-subtitle">‘दीप’ 🪔 — जागरूकता से आत्मनिर्भरता</div>
+                </div>
+            </div>
             <button class="logout-btn" onclick="logout()">
                 <i class="fas fa-sign-out-alt"></i>
                 <span>Logout</span>
