--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Amma - Sign In</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@400;600;700;800;900&family=Jaini+Purva:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Top header with logo (left corner) -->
+    <header class="site-header">
+        <img src="public/Awwa2-logo.png" alt="AWWA" class="header-logo">
+    </header>
     <div class="container">
         <div class="login-card">
             <!-- Left Column - Photo Collage -->
@@ -22,8 +27,9 @@
                 <div class="form-container">
                     <!-- Logo and Header -->
                     <div class="header">
-                        <div class="logo">
-                            <img src="public/Awwa2-logo.png" alt="Awwa Logo" class="logo-image">
+                        <div class="hindi-hero">
+                            <div class="hindi-title">दीप🪔</div>
+                            <div class="hindi-sub">"जागरूकता से आत्मनिर्भरता"</div>
                         </div>
                         <p class="subtitle">Please sign in to continue</p>
                     </div>
