Login: add AWWA PROJECT badge before Hindi heading

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
                 <img src="public/Awwa2-logo.png" alt="AWWA Logo" class="app-logo" />
                 <div class="app-title-wrap">
                     <h1 class="app-title">AWWA Family Management System</h1>
-                    <div class="app-subtitle">‘दीप’ 🪔 — जागरूकता से आत्मनिर्भरता</div>
+                    <div class="app-subtitle">‘दीप’ 🪔 — ☼ जागरूकता से आत्मनिर्भरता ☼</div>
                 </div>
             </div>
             <button class="logout-btn" onclick="logout()">
