--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
                 <div class="form-container">
                     <!-- Logo and Header -->
                     <div class="header">
+                        <div class="project-badge">
+                            <span class="badge-text">AWWA PROJECT</span>
+                    
+                        </div>
                         <div class="hindi-hero">
                             <div class="hindi-title">दीप🪔</div>
-                            <div class="hindi-sub">"जागरूकता से आत्मनिर्भरता"</div>
+                            <div class="hindi-sub">☼ जागरूकता से आत्मनिर्भरता ☼</div>
                         </div>
                         <p class="subtitle">Please sign in to continue</p>
                     </div>
