Login: increase PROJECT badge font size to 16px

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <!-- Logo and Header -->
                     <div class="header">
                         <div class="project-badge">
-                            <span class="badge-text">AWWA PROJECT</span>
+                            <span class="badge-text">PROJECT</span>
                     
                         </div>
                         <div class="hindi-hero">
