--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     <div class="header">
                         <div class="project-badge">
                             <span class="badge-text">PROJECT</span>
-                    
+                            
                         </div>
                         <div class="hindi-hero">
-                            <div class="hindi-title">दीप🪔</div>
+                            <div class="hindi-title">दीप <img src="public/Untitled design (25).png" alt="दीप" class="diya-icon"></div>
                             <div class="hindi-sub">☼ जागरूकता से आत्मनिर्भरता ☼</div>
                         </div>
                         <p class="subtitle">Please sign in to continue</p>
