Update D-ID chatbot configuration with new agent ID and client key

--- a/dashboard.html
+++ b/dashboard.html
@@ -1610,8 +1610,8 @@ document.addEventListener('DOMContentLoaded', () => {
 <script type="module"
       src="https://agent.d-id.com/v2/index.js"
       data-mode="fabio"
-      data-client-key="Z29vZ2xlLW9hdXRoMnwxMDI1MjM5ODczNjY3OTQxMDExNDM6ckNRQ1NvS3AtRnloSXZxRVRRZnQ3"
-      data-agent-id="v2_agt_MaTD7Vdv"
+      data-client-key="Z29vZ2xlLW9hdXRoMnwxMDA1MjIwMjc4MDA4MjIzNDk5MDE6aDEyZUd2MFNUa2gzWkRhWG0ybjA2"
+      data-agent-id="v2_agt_CKSD5djL"
       data-name="did-agent"
       data-monitor="true"
       data-orientation="horizontal"
