--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                                 <i class="fas fa-shield-alt input-icon"></i>
                                 <select id="userType" name="userType" required>
                                     <option value="">Select your role</option>
-                                    <option value="admin">l1</option>
-                                    <option value="teacher">l2</option>
-                                    <option value="student">l3</option>
-                                    <option value="parent">l4</option>
+                                    <option value="admin">L1</option>
+                                    <option value="teacher">L2</option>
+                                    <option value="student">L3</option>
+                                    <option value="parent">L4</option>
                                 </select>
                                 <i class="fas fa-chevron-down select-arrow"></i>
                             </div>
@@ -118,8 +118,8 @@
     <script type="module"
           src="https://agent.d-id.com/v2/index.js"
           data-mode="fabio"
-          data-client-key="Z29vZ2xlLW9hdXRoMnwxMDI1MjM5ODczNjY3OTQxMDExNDM6ckNRQ1NvS3AtRnloSXZxRVRRZnQ3"
-          data-agent-id="v2_agt_MaTD7Vdv"
+          data-client-key="Z29vZ2xlLW9hdXRoMnwxMDA1MjIwMjc4MDA4MjIzNDk5MDE6aDEyZUd2MFNUa2gzWkRhWG0ybjA2"
+          data-agent-id="v2_agt_CKSD5djL"
           data-name="did-agent"
           data-monitor="true"
           data-orientation="horizontal"
