--- a/dashboard.html
+++ b/dashboard.html
@@ -287,13 +287,13 @@
                     <div class="mini-meta">
                         <span class="mini-label">AVG CHILDREN/FAMILY</span>
                         <div class="mini-value" id="avgChildrenVal">1.9</div>
-                        <small>Average children per family</small>
+                        <small>Average Children per Family</small>
                     </div>
                 </div>
             </div>
             <div class="stats-charts-row">
                 <div class="chart-card">
-                    <div class="chart-header"><h3>Children by Class & Special Needs</h3><div id="sub-children" class="chart-subtitle"></div></div>
+                    <div class="chart-header"><h3>Children by Education Level</h3><div id="sub-children" class="chart-subtitle"></div></div>
                     <canvas id="childrenClassChart"></canvas>
                 </div>
                 <div class="chart-card">
@@ -303,17 +303,17 @@
             </div>
             <div class="stats-charts-row">
                 <div class="chart-card">
-                    <div class="chart-header"><h3>Husband & Ladies Occupation</h3><div id="sub-occupation" class="chart-subtitle"></div></div>
+                    <div class="chart-header"><h3>Ladies Occupation</h3><div id="sub-occupation" class="chart-subtitle"></div></div>
                     <canvas id="occupationChart"></canvas>
                 </div>
                 <div class="chart-card">
-                    <div class="chart-header"><h3>Qualification & Joining Date</h3></div>
+                    <div class="chart-header"><h3>Qualification & Stn Joining Date </h3></div>
                     <canvas id="qualificationChart"></canvas>
                 </div>
             </div>
             <div class="stats-charts-row">
                 <div class="chart-card">
-                    <div class="chart-header"><h3>IVF Starts per Month</h3></div>
+                    <div class="chart-header"><h3>IVF Stats per Month</h3></div>
                     <canvas id="ivfStartsChart"></canvas>
                 </div>
                 <div class="chart-card">
@@ -323,7 +323,7 @@
             </div>
             <div class="stats-charts-row">
                 <div class="chart-card">
-                    <div class="chart-header"><h3>Special Child vs Normal Medical Cases</h3></div>
+                    <div class="chart-header"><h3>Special Child & Normal Medical Cases</h3></div>
                     <canvas id="specialVsNormalChart"></canvas>
                 </div>
                 <div class="chart-card">
@@ -353,7 +353,7 @@
             </div>
             <div class="stats-charts-row">
                 <div class="chart-card">
-                    <div class="chart-header"><h3>Low Medical Category – Present Med Cat</h3></div>
+                    <div class="chart-header"><h3>Low Medical Category</h3></div>
                     <canvas id="lowMedCatChart"></canvas>
                 </div>
                 <div class="chart-card">
