Update index.html with new image and add Untitled design (26).png

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- Left Column - Photo Collage -->
             <div class="photo-section">
                 <div class="photo-collage">
-                    <img src="public/login1.png" alt="Women's Community Photos" class="main-image">
+                    <img src="public/Untitled design (26).png" alt="Women's Community Photos" class="main-image">
                 </div>
             </div>
 
