--- a/dashboard.html
+++ b/dashboard.html
@@ -17,6 +17,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     
+    <!-- D-ID Agent Script -->
+    <script type="module"
+          src="https://agent.d-id.com/v2/index.js"
+          data-mode="fabio"
+          data-client-key="Z29vZ2xlLW9hdXRoMnwxMDA1MjIwMjc4MDA4MjIzNDk5MDE6aDEyZUd2MFNUa2gzWkRhWG0ybjA2"
+          data-agent-id="v2_agt_CKSD5djL"
+          data-name="did-agent"
+          data-monitor="true"
+          data-orientation="horizontal"
+          data-position="right">
+    </script>
+    
     <style>
         /* Enhanced Charts Styles */
         .enhanced-charts-section {
