--- a/dashboard.html
+++ b/dashboard.html
@@ -128,8 +128,8 @@
             <div class="app-brand">
                 <img src="public/Untitled design (27).png" alt="AWWA Logo" class="app-logo" />
                 <div class="app-title-wrap">
-                    <h1 class="app-title">RanbanEgale</h1>
-                    <div class="app-subtitle">Awwa Centralised hub</div>
+                    <h1 class="app-title">Ranbankure Egale : Awwa Centralised Hub</h1>
+                    
                 </div>
             </div>
             <button class="logout-btn" onclick="logout()">
