Update L1 role to Super User with default selection
- Change L1 option label to 'L1(Super User)' for clarity
- Set L1(Super User) as default selected role in login form
- Improve user role identification and selection experience
- Enhanced role hierarchy display in login interface

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amma - Sign In</title>
+    <title>AWWA - Sign In</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -62,7 +62,7 @@
                                 <i class="fas fa-shield-alt input-icon"></i>
                                 <select id="userType" name="userType" required>
                                     <option value="">Select your role</option>
-                                    <option value="L1" selected>L1</option>
+                                    <option value="L1" selected>L1(Super User)</option>
                                     <option value="L2">L2</option>
                                     <option value="L3">L3</option>
                                     <option value="L4">L4</option>
