Update dashboard title to AWWA Centralised Information Hub
- Change title to 'Ranbankura Egale : AWWA Centralised Information Hub'
- Emphasize centralized information hub functionality
- Improve clarity and professional branding
- Better reflect the comprehensive information management system

--- a/dashboard.html
+++ b/dashboard.html
@@ -128,7 +128,7 @@
             <div class="app-brand">
                 <img src="public/Untitled design (27).png" alt="AWWA Logo" class="app-logo" />
                 <div class="app-title-wrap">
-                    <h1 class="app-title">Ranbankure Egale : Awwa Centralised Hub</h1>
+                    <h1 class="app-title">Ranbankura Egale : AWWA Centralised Information Hub</h1>
                     
                 </div>
             </div>
