Add Mrs. title to spouse name for Tarunpreet Singh
- Update spouse name display to 'Mrs. Deepkiran Kaur'
- Improve formal addressing and respect for spouse information
- Enhanced professional presentation of family details

--- a/dashboard.html
+++ b/dashboard.html
@@ -1035,7 +1035,7 @@ function loadUserInfo() {
         // Add wife information for Tarunpreet Singh
         if (userInfo.userId === 'tarunpreet singh') {
             userInfoHTML += `
-                <div class="info-row"><span class="label">Spouse Name:</span><span class="value">Deepkiran Kaur</span></div>
+                <div class="info-row"><span class="label">Spouse Name:</span><span class="value">Mrs. Deepkiran Kaur</span></div>
                 <div class="info-row"><span class="label">Spouse Email:</span><span class="value">deepkirankaur23@gmail.com</span></div>
                 <div class="info-row"><span class="label">Spouse Contact:</span><span class="value">7052615743</span></div>
             `;
