Add family count display and wife image container to dashboard
- Display total family count (274) in Families section heading
- Add image container in Additional Details panel header
- Prepare for wife image display in Wife Details section
- Enhance dashboard with real data statistics and visual elements
- Improve user awareness of total family members

--- a/dashboard.html
+++ b/dashboard.html
@@ -191,6 +191,9 @@
                     <div class="panel-header">
                         <i class="fas fa-circle-info"></i>
                         <h3 id="additionalDetailsTitle">Additional Details</h3>
+                        <div class="panel-header-image" id="additionalDetailsImage" style="display: none;">
+                            <img src="" alt="Wife Image" id="wifeImage" />
+                    </div>
                     </div>
                     <div class="panel-body" id="additionalDetailsBody">
                         <!-- Dynamic content will be loaded here -->
@@ -361,7 +364,7 @@
             <!-- Families Section -->
     <div class="families-section app-section hidden" id="section-families">
         <div class="section-header-row">
-                    <h2>Families <span class="count">(50)</span></h2>
+                    <h2>Families <span class="count">(274)</span></h2>
             <div class="families-actions">
                 <input type="text" class="fam-search" placeholder="Search families..." />
                 <button class="check-btn">Add Family</button>
