--- a/dashboard.html
+++ b/dashboard.html
@@ -128,7 +128,7 @@
             <div class="app-brand">
                 <img src="public/Untitled design (27).png" alt="AWWA Logo" class="app-logo" />
                 <div class="app-title-wrap">
-            
+                    <h1 class="app-title">Ranbankure Egales AWWA Centralised Information Hub</h1>
                 </div>
             </div>
             <button class="logout-btn" onclick="logout()">
