Refactor family dashboard and update login system
- Introduced a new family.html page for family management with a responsive layout and integrated login functionality.
- Updated login2.html to replace the previous login.html, enhancing user experience with improved styling and role-based access.
- Adjusted dashboard_super user.html to accommodate new family data structure and improved children information display.
- Updated index.html to redirect to the new login page.
- Enhanced CSS styles for better visual consistency across the application.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <script>
         // Redirect to login page after a brief loading animation
         setTimeout(() => {
-            window.location.href = 'login.html';
+            window.location.href = 'login2.html';
         }, 2000);
     </script>
 </body>
