Updated profile images

--- a/dashboard_super user.html
+++ b/dashboard_super user.html
@@ -4533,13 +4533,13 @@ document.addEventListener('DOMContentLoaded', function() {
                 profileImage = 'public/Gemini_Generated_Image_4jitd24jitd24jit.png';
                 break;
             case 'piyush sharma':
-                profileImage = 'public/Gemini_Generated_Image_iy5po1iy5po1iy5p.png';
+                profileImage = 'public/piyush.jpeg';
                 break;
             case 'harish kumar':
-                    profileImage = 'public/Gemini_Generated_Image_kd3igrkd3igrkd3i (1).png';
+                    profileImage = 'public/harish.jpeg';
                 break;
             case 'rahul t more':
-                profileImage = 'public/Col.jpg';
+                profileImage = 'public/Rahul.jpeg';
                 break;
             case 'bt01':
                 profileImage = 'public/profile.png';
