Updated the my course section

--- a/family.html
+++ b/family.html
@@ -2426,15 +2426,18 @@
                <div class="course-video-container">
                 <div class="course-video-header">
                   <h4><i class="fas fa-play-circle"></i> Course Video</h4>
-                  <p>Too-Hot-Too-Cold-and-Totally-Confused - Hindi Presentation</p>
+                  <p>Too-Hot-Too-Cold-and-Totally-Confused - English Presentation</p>
                 </div>
                 <div class="video-wrapper">
-                  <iframe src="https://player.vimeo.com/video/1123144476?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="400" height="300" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" title="Too-Hot-Too-Cold-and-Totally-Confused_pptx (2)"></iframe> 
+                  <iframe src="https://player.vimeo.com/video/1123144476?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                   width="100%" height="400" frameborder="0"
+                    allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" title="Too-Hot-Too-Cold-and-Totally-Confused_pptx-English"></iframe> 
                 </div>
                 <div class="course-video-info">
                   <div class="video-details">
                     <span class="video-duration"><i class="fas fa-clock"></i> Duration: 15 minutes</span>
-                    <span class="video-language"><i class="fas fa-language"></i> Language: Hindi</span>
+                    <span class="video-language"><i class="fas fa-language"></i> Language: English</span>
                   </div>
                   <div class="video-actions">
                     <button class="btn btn-primary" onclick="openVideoInNewTab()">
