Add About Deep Popup to dashboard_super user.html
- Implemented a new About Deep popup feature with styles and JavaScript functions for display and interaction.
- Added responsive design for the popup to enhance mobile experience.
- Included new navigation items to trigger the popup in the dashboard layout.

--- a/family.html
+++ b/family.html
@@ -53,7 +53,7 @@
     data-name="did-agent"
     data-monitor="true"
     data-orientation="horizontal"
-    data-position="right">
+    data-position="left">
 </script>
 
     <style>
