--- a/dashboard_super user.html
+++ b/dashboard_super user.html
@@ -215,6 +215,137 @@
             height: 300px;
             width: 100%;
         }
+
+        /* About Deep Popup Styles */
+        .about-deep-popup {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 9999;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s ease;
+        }
+
+        .about-deep-popup.open {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .about-deep-popup.hidden {
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        .about-deep-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(5px);
+        }
+
+        .about-deep-content {
+            position: relative;
+            background: white;
+            border-radius: 20px;
+            max-width: 90vw;
+            max-height: 90vh;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.3);
+            transform: scale(0.9);
+            transition: transform 0.3s ease;
+        }
+
+        .about-deep-popup.open .about-deep-content {
+            transform: scale(1);
+        }
+
+        .about-deep-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 20px 30px;
+            background: linear-gradient(135deg, #ff7a00, #ff9500);
+            color: white;
+        }
+
+        .about-deep-header h2 {
+            margin: 0;
+            font-size: 24px;
+            font-weight: 600;
+        }
+
+        .about-deep-close {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 24px;
+            cursor: pointer;
+            padding: 5px;
+            border-radius: 50%;
+            transition: background-color 0.3s ease;
+        }
+
+        .about-deep-close:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+
+        .about-deep-images {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+            padding: 30px;
+            overflow: auto;
+        }
+
+        .about-deep-image {
+            max-width: 45%;
+            max-height: 80vh;
+            object-fit: contain;
+            border-radius: 10px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease;
+        }
+
+        .about-deep-image:hover {
+            transform: scale(1.05);
+        }
+
+        /* Responsive Design for About Deep Popup */
+        @media (max-width: 768px) {
+            .about-deep-images {
+                flex-direction: column;
+                gap: 15px;
+                padding: 20px;
+            }
+
+            .about-deep-image {
+                max-width: 100%;
+                max-height: 40vh;
+            }
+
+            .about-deep-header {
+                padding: 15px 20px;
+            }
+
+            .about-deep-header h2 {
+                font-size: 20px;
+            }
+        }
         .modal-overlay {
                 position: fixed !important;
                 top: 0 !important;
@@ -2780,6 +2911,10 @@
                         <i class="fas fa-chart-bar"></i>
                         <span>Admin Users</span>
                     </li>
+                    <li class="mobile-nav-item" onclick="openAboutDeepPopup()">
+                        <i class="fas fa-info-circle"></i>
+                        <span>About "Project Deep"</span>
+                    </li>
         <!-- <li class="mobile-nav-item" data-target="section-about" onclick="navigateToSection('section-about')">
             <i class="fas fa-info-circle"></i>
             <span>About</span>
@@ -2811,6 +2946,7 @@
                     <li data-target="section-companies"><i class="fas fa-building"></i><span>624 Sub Units</span></li>
                     <li data-target="section-Newsletter"><i class="fas fa-calendar"></i><span>Newsletter</span></li>
                     <li data-target="section-Rankings"><i class="fas fa-chart-bar"></i><span>Admin Users</span></li>
+                    <li onclick="openAboutDeepPopup()"><i class="fas fa-info-circle"></i><span>About "Project Deep"</span></li>
                     <!-- <li data-target="section-about"><i class="fas fa-info-circle"></i><span>About</span></li> -->
                 </ul>
             </nav>
@@ -6982,7 +7118,59 @@ function initNewsletterCharts() {
                 }
             }
         });
+
+        // ===========================================
+        // ABOUT DEEP POPUP FUNCTIONS
+        // ===========================================
+        // Functions to handle the About Deep popup display and interaction.
+
+        function openAboutDeepPopup() {
+            const popup = document.getElementById("aboutDeepPopup");
+            if (!popup) {
+                console.error("About Deep popup element not found!");
+                return;
+            }
+
+            popup.classList.remove("hidden");
+            setTimeout(() => {
+                popup.classList.add("open");
+            }, 10);
+
+            // Prevent body scroll when popup is open
+            document.body.style.overflow = "hidden";
+        }
+
+        function closeAboutDeepPopup() {
+            const popup = document.getElementById("aboutDeepPopup");
+            if (!popup) return;
+
+            popup.classList.remove("open");
+            setTimeout(() => {
+                popup.classList.add("hidden");
+            }, 300);
+
+            // Restore body scroll
+            document.body.style.overflow = "auto";
+        }
 </script>
+
+    <!-- About Deep Popup -->
+    <div id="aboutDeepPopup" class="about-deep-popup hidden">
+      <div class="about-deep-overlay" onclick="closeAboutDeepPopup()"></div>
+      <div class="about-deep-content">
+        <div class="about-deep-header">
+          <h2>About "Project Deep"</h2>
+          <button class="about-deep-close" onclick="closeAboutDeepPopup()">
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+        <div class="about-deep-images">
+          <img src="public/1.png" alt="Deep Image 1" class="about-deep-image" />
+          <img src="public/2.png" alt="Deep Image 2" class="about-deep-image" />
+        </div>
+      </div>
+    </div>
+
 </body>
 </html>
 
